--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Portfolio Website To Showcase My Work"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/My-Logo-White.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/My-Logo-Black-Background.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
